[package]
name = "tune_sage"
description = "A wrapper around the MusicBrainz JSON API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SpinningGoblin/tune_sage"
version = "0.1.0"
edition = "2021"
exclude = [".vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1.23", features = ["full"] }
urlencoding = "2.1"
